@@ -1,45 +1,96 @@
-plugins {
-    id 'java'
-}
+apply plugin: "java"
 
-group pGroup
+version '1.0'
 
-sourceSets.main {
-    java.srcDir("src/")
-    resources.srcDir("assets/")
-}
+sourceSets.main.java.srcDirs = ["src"]
 
-repositories {
+repositories{
     mavenCentral()
-    maven { url "https://jitpack.io" }
+    maven{ url 'https://www.jitpack.io' }
 }
 
-dependencies {
-    implementation "com.github.Anuken.Mindustry:core:$pMindustryVersion"
+ext{
+    //the build number that this mod is made for
+    mindustryVersion = 'v126.2'
+    //version of SDK you will be using
+    sdkVersion = '30'
+    sdkRoot = System.getenv("ANDROID_HOME")
+
+    doExec = { cmd ->
+        def proc = cmd.execute(null, new File("$buildDir/libs"))
+        proc.waitForProcessOutput(System.out, System.err)
+    }
 }
 
-jar {
-    archiveFileName.set pArtifactFilename
-}
-
-task dexify(type: Jar) {
-    archiveName "dexed-$pArtifactFilename"
-
-    final File jarArtifact = new File(tasks.jar.archiveFile.get().asFile.parent, pArtifactFilename),
-               dexedArtifact = new File(tasks.dexify.getTemporaryDir(), "dexed.jar")
-    doFirst {
-        exec {
-            workingDir dexedArtifact.parent
-            def command = ["d8", "--min-api", pMinApi, "--output", dexedArtifact, jarArtifact]
-            if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows'))
-                commandLine("cmd", "/c", *command)
-            else
-                commandLine(*command)
-
+//java 8 backwards compatibility flag
+allprojects{
+    tasks.withType(JavaCompile){
+        if(JavaVersion.current() != JavaVersion.VERSION_1_8){
+            options.compilerArgs.addAll(['--release', '8'])
         }
+//
+//        doFirst {
+//            options.compilerArgs.addAll(['--release', '14', "--enable-preview"])
+//        }
+    }
+}
+
+dependencies{
+    implementation 'org.jetbrains:annotations:20.1.0'
+    //implementation "com.github.Anuken.Mindustry:annotations:$mindustryVersion"
+    compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
+    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
+}
+
+task jarAndroid{
+    dependsOn "jar"
+    doLast{
+        //collect dependencies needed for desugaring
+        def files = (configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [new File("$sdkRoot/platforms/android-$sdkVersion/android.jar")])
+        def dependencies = files.collect{ "--classpath $it.path" }.join(" ")
+
+        //dex and desugar files - this requires d8 in your PATH
+        doExec("d8 $dependencies --min-api 14 --output ${project.archivesBaseName}Android.jar ${project.archivesBaseName}Desktop.jar")
+    }
+}
+
+jar{
+    archiveFileName = "${project.archivesBaseName}Desktop.jar"
+
+    from{
+        configurations.runtimeClasspath.collect{ it.isDirectory() ? it : zipTree(it) }
     }
 
-    from(zipTree(jarArtifact), zipTree(dexedArtifact))
+    from(rootDir){
+        include "mod.hjson"
+        include "icon.png"
+    }
+
+    from("assets/"){
+        include "**"
+    }
 }
 
-task buildDex dependsOn "build", "dexify"
+task deploy(type : Jar){
+    def fi = new File("$rootDir/mod.hjson")
+    fi.withReader { reader ->
+        def lines = reader.readLines()
+        fi.withWriter { writer ->
+            lines.each { line ->
+                def check = line.split(":")[0].equals("minGameVersion")
+                if(!check) writer.append("$line\r\n")
+            }
+            writer.append("minGameVersion: ${mindustryVersion.split("v")[1]}\r\n")
+        }
+    }
+    dependsOn jarAndroid
+    dependsOn jar
+    archiveFileName = "${project.archivesBaseName}.jar"
+
+    from{ [zipTree("$buildDir/libs/${project.archivesBaseName}Desktop.jar"), zipTree("$buildDir/libs/${project.archivesBaseName}Android.jar")] }
+
+    doLast{
+        delete{ delete "$buildDir/libs/${project.archivesBaseName}Desktop.jar" }
+        delete{ delete "$buildDir/libs/${project.archivesBaseName}Android.jar" }
+    }
+}
